# rb2301_ca1

./: LICENSE  README.md  ca1.sh  gz_ca1.sh  kill.sh
src/rb2301_ca1/: package.xml  setup.cfg  setup.py
src/rb2301_ca1/rb2301_ca1/: obstacle_avoidance.py  obstacle_generator.py
src/rb2301_gz/: CMakeLists.txt  package.xml
src/rb2301_gz/launch/: ca1_gazebo.launch.py
src/rb2301_gz/meshes/: right_wheel_link.STL
src/rb2301_gz/meshes/coke/6/: model.sdf
src/rb2301_gz/meshes/nanorobot/: base_laser_link.STL  left_wheel_link.STL
src/rb2301_gz/rviz/: rb2301.rviz
src/rb2301_gz/urdf/: _nanocar_description.urdf  nanocar.gazebo.xacro  nanocar.urdf.xacro  nanocar_description.urdf
src/rb2301_gz/worlds/: empty.sdf  obstacle_world_ca1.sdf
